# surveyor-demo

./: .env.example  .gitignore  LICENSE  README.md  WALKTHROUGH.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: phase.md
docs/: 00-idea.md  01-ui-mockup.html  01-ui-mockup.md  02-architecture.md  05-phase5-review.md  README.md  deck-skill-source.md
scripts/: dev.sh  try_analysis.py  try_boundaries.py  try_features.py  try_statistic.py
surveyor/: __init__.py  __main__.py  cli.py  config.py
surveyor/agent/: __init__.py  events.py  loop.py  prompt.py
surveyor/app/: __init__.py  basemap.py  main.py
surveyor/data/: __init__.py  geo.py  models.py  store.py
surveyor/manifest/: __init__.py  capabilities.py
surveyor/sources/: __init__.py  arcgis.py  nomis.py  os_ngd.py
surveyor/tools/: __init__.py  base.py  registry.py  render.py
surveyor/tools/analysis/: __init__.py  aggregate.py  attach.py  filter.py  normalize.py  rank.py  relate.py
surveyor/tools/fetch/: __init__.py  boundaries.py  features.py  statistic.py
tests/: conftest.py  test_app_datasets.py  test_app_query.py  test_basemap.py  test_config.py  test_data.py  test_events.py
web/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/components/: ChartRail.tsx  ChatPane.tsx  MapPane.tsx  Topbar.tsx
web/src/lib/: format.ts  lib.test.ts  palettes.ts  stream.ts  types.ts
web/src/state/: useSurveyor.ts
web/src/styles/: app.css  colors_and_type.css  surveyor.css
