[project]
name = "surveyor"
version = "0.1.0"
description = "Agentic chat interface to UK national geospatial data — build phase 1 backend"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
]

# Further dependencies are added as the tools that need them land:
#   anthropic            — the agent loop
#   shapely, geopandas, pyproj — the analysis operations (aggregate, relate)
#   fastapi, uvicorn     — build phase 2 (the HTTP/SSE layer)

[tool.uv]
# An application, not a distributable package — uv manages the venv, we run via `-m`.
package = false
