[project]
name = "surveyor"
version = "0.1.0"
description = "Agentic chat interface to UK national geospatial data — build phase 1 backend"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.104.1",
    "fastapi>=0.115",
    "geopandas>=1.1.3",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyproj>=3.7.2",
    "shapely>=2.1.2",
    "uvicorn[standard]>=0.30",
]

# Dependencies by the layer that needs them:
#   anthropic            — the agent loop
#   shapely, geopandas, pyproj — the analysis operations (aggregate, relate)
#   fastapi, uvicorn     — build phase 2: the HTTP/SSE layer and basemap proxy
#   httpx                — source clients and the basemap tile proxy

[tool.uv]
# An application, not a distributable package — uv manages the venv, we run via `-m`.
package = false

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]  # the app isn't installed (package = false); import surveyor from the repo root
addopts = "-q"
# Live tests against the upstream APIs are opt-in (RUN_LIVE_TESTS=1) so CI never burns a key.
markers = [
    "live: hits real upstream APIs; run only with RUN_LIVE_TESTS=1",
]
